--- a/style/architect.css
+++ b/style/architect.css
@@ -25,7 +25,8 @@ nav li{
     font-weight: 500; 
 }
 
-.navtitle
+.navtitle,
+.box_head_text
 {
     font-size: 45px;
     font-style: normal;
@@ -33,12 +34,46 @@ nav li{
     line-height: normal;
     color:#131313;
 }
+.box_head_text
+{
+    line-height: 26px;
+}
+.box_img{
+    margin-left: 70px;
+}
 .banner{
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
     
     color:#131313;
+}
+.experiance{
+    width: 245px;
+    height: 120px;
+    border-radius: 8px;
+   background: #FF900E;
+   text-align: center;
+   padding: 42px ;
+}
+.first{
+   color:  #FFF;
+   font-size: 65px;
+   font-weight: 700;
+   line-height: 70px;
+}
+.Facts{
+    margin-top: 100px;
+}
+.add{
+    margin-left: 20px;
+}
+.secound{
+
+    color:  #FFF;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 40px;
 }
 
 .banner_head{
@@ -48,7 +83,9 @@ nav li{
 
 }
 
-.head_describtion{
+.head_describtion,
+
+{
 
     color: #727272;
     font-size: 16px;
@@ -68,6 +105,34 @@ nav li{
 .p img{
     margin-top: 30px;
     width: 100%;
+}
+
+.sponser_text{
+    
+    margin:690px,100px,690px,10px ;
+    text-align: center;
+}
+
+.sponsor_img{
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+.footer_text
+{
+    text-align:center;
+    margin-left: 240px,316px;
+    background-color: #FFF4E7;
+    padding: 410px,40px;
+    border-radius: 2px;
+    width: 1440px;
+    height: 100px;
+    justify-content: center;
+    justify-items: center;
+   
+    
 }
 
 
@@ -108,14 +173,28 @@ main{
     font-weight: 700;
 
 }
+.mid_title{
+    color: #131313;
+    font-size: 20px;
+    font-weight: 600;
+}
 
 .cart{
    border: 2px solid black;
    text-align: center;
    padding: 30px;
 }
+.box{
+    width: 586px;
+    height: 171px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
 
-.cart_section{
+.cart_section,
+.mid{
     display: flex;
     justify-content: space-around;
     margin-top:100px;
@@ -140,9 +219,19 @@ main{
         padding:20px;
     }
     nav,
-    .container
+    .container,
+    .cart_section
+    
     {
         flex-direction: column;
+        gap: 20px;
+        padding: 30px 20px;
+  
+    }
+    .mid{
+        flex-direction: column;
+     margin: 0px;
+
     }
 }
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -150,8 +239,16 @@ main{
         padding:50px;
     }
     nav,
-    .container
+    .container,
+    .mid
+    
     {
         flex-direction: column;
+    }
+    .cart_section{
+        flex-direction: column;
+        gap: 20px;
+        padding: 30px 20px;
+       
     }
 }
